# pramana

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: base.yaml  stage_0.yaml  vyapti_eval.yaml
data/: __init__.py
data/synthetic/: .gitkeep
data/training/: stage_0.jsonl  stage_1.jsonl
data/validation/: .gitkeep
data/vyapti_probe/: README.md  __init__.py  problems.json  solutions.json
docs/: TECHNICAL_INVENTORY.md  architecture_recommendations.md  eval_strategy.txt  hf_serverless.txt  hfspaces_demo.txt  implementation_report.md  implementation_report_outline.md  implementation_report_review.md  openwebui_ollama_stage0_instructions.md  pramana_docker.txt  pramana_docker_setup.sh  pramana_paper_review.md  pramana_plan_1.md  pramana_plan_2.txt  pramana_plan_3.txt  pramana_plan_4.txt  process_docker_runtime.md  process_hf_space_ops.md  process_model_merge_quantize.md  process_operational_notes.md  seed_example_type.txt  stage0_followup_comprehensive.md  stage_0_comprehensive_report.md  stage_0_corrective_plan.md  stage_0_decision_gate.md  stage_0_hyperparameter_justification.md  stage_0_lessons_learned.md  stage_1_comprehensive_report.md  stage_1_paper_appendix.md  stage_1_plan_review.md  synth_data.txt  wandb_guide_1.txt  wandb_guide_detailed.txt
docs/architecture/: training_pipeline_patterns.md
docs/figures_ablation_v1/: stage1_ablation_summary.json
docs/figures_examples_v1/: stage0_representative_examples.csv  stage0_representative_examples.json
docs/figures_stage0_v2/: stage0_base_vs_tuned_metrics.csv  stage0_loss_summary.tex  stage0_parse_error_breakdown.csv  stage0_parse_error_breakdown.tex
docs/figures_stage1_v2/: stage1_base_vs_tuned_metrics.tex  stage1_eval_loss.csv  stage1_eval_summary.tex  stage1_loss_summary.csv  stage1_loss_summary.tex  stage1_parse_error_breakdown.csv  stage1_train_loss.csv
docs/paper/: PAPER_COMPLETION_SUMMARY.md  PAPER_ENHANCEMENT_TRACKER.md  QUALITY_REVIEW_REPORT.md  README.md  neurips_2024.sty  pramana_paper.aux  pramana_paper.bbl  pramana_paper.blg  pramana_paper.out  pramana_paper.tex  references.bib
docs/plans/: implementation_plan_review.md  pramana_spec_review.md  spec.md
hf_upload/nyaya-llama-3b-stage0/: README.md
hf_upload_full/nyaya-deepseek-8b-stage1-merged/: config.json  generation_config.json  tokenizer_config.json
hf_upload_full/nyaya-llama-3b-stage0-merged/: Modelfile  config.json  (+1 more)
notebooks/: 01_pramana_explorer.ipynb  02_pramana_evaluation.ipynb  03_vyapti_evaluation.ipynb  TEST_RESULTS.md  pramana_backend.py  requirements.txt  setup_ollama_models.sh
results/: stage_0_corrected_evaluation.json  stage_0_corrected_evaluation_v2.json  stage_0_corrected_evaluation_v3.json  stage_0_corrected_evaluation_v4.json  stage_0_corrected_evaluation_v5.json  stage_0_corrected_evaluation_v6.json  stage_0_corrected_evaluation_v7.json  stage_0_evaluation.json  stage_0_final_validation.json  stage_0_shortcut_detection.json  stage_1_evaluation.json
scripts/: analyze_ablation.py  analyze_problem_types.py  evaluate_stage0.py  extract_z3_encodings.py  generate_paper_figures.py  parse_vyapti_benchmark.py  prepare_stage1_training_data.py  prepare_training_data.py  publish_vyapti_dataset.py  rescore_results.py  run_tier2_judge.py  run_vyapti_analysis.py  run_vyapti_evaluation.py  run_vyapti_real.py  shortcut_detection.py  train_stage0.py  train_stage0_corrected.py  train_stage1.py  train_unsloth_dgx.py  validate_benchmark.py
tests/: __init__.py  conftest.py  test_format_adherence.py
(+1527 files in other folders)
